tests/macro-tests/cases/widget_new/malformed_fields1.stderr
error: expected one of `)`, `,`, `.`, `?`, or an operator, found `;`
 --> cases/widget_new/malformed_fields1.rs:8:22
  |
8 |             margin: 0;
  |                      ^ expected one of `)`, `,`, `.`, `?`, or an operator
